[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Accordion3.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/AccordionButton.gd" type="Script" id=2]
[ext_resource path="res://Fonts/vt323_20.tres" type="DynamicFont" id=3]

[node name="AccordionButton" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_right = 1024.0
margin_bottom = 26.0
focus_mode = 0
custom_fonts/font = ExtResource( 3 )
toggle_mode = true
enabled_focus_mode = 0
align = 0

[node name="Accordion3" parent="." instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 26.0
margin_right = 1024.0
margin_bottom = 26.0
[connection signal="pressed" from="Button" to="Accordion3" method="expand"]
[connection signal="toggled" from="Button" to="." method="_on_Button_toggled"]
